Se aplica factor comun a los estilos de botones Nuevo Post, Login y Registro

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,40 +13,39 @@ body {
     margin: 0px;
 }
 
-.mainButton {
-    background-color: #1bb76e;
+/*A continuacion .button y .button:hover son una especie de factor comun de estilos,
+siendo esto una buena practica que nos permite actualizar el codigo de forma sencilla */
+.button {
     color: white;
     /*cursor: pointer; Se cambia el cursor de flecha por uno de manito */
     Border: 0.1em;
     padding: 5px 10px;
     border-radius: 4px; /*Redondea los bordes de este boton */
     font-weight: bolder; /*Negrita */
+}
+
+/*MODIFICADORES DE CLASE */
+.button:hover { /*Los elementos con esta clase cambian cuando el cursor les pasa por encima  */
+    cursor: pointer; /*El cursor se vuelve manito al pasar sobre el elemento */
+    transform: scale(1.1); /*El tamaño crece al 110%*/
+}
+
+.mainButton {
+    background-color: #1bb76e;
     box-shadow: 0.1em 0.1em 0.05em darkcyan; /*Inserta una sombra: https://developer.mozilla.org/en-US/docs/Web/CSS/box-shadow */
 }
 
 /*MODIFICADORES DE CLASE */
 .mainButton:hover { /*Los elementos con esta clase cambian cuando el cursor les pasa por encima  */
-    cursor: pointer; /*El cursor se vuelve manito al pasar sobre el elemento */
     box-shadow: 0.3em 0.3em 0.1em darkcyan; /*La sombra crece un poco*/
-    transform: scale(1.1); /*El tamaño crece al 110%*/
-
 }
 
 .secondaryButton {
     background-color: #1b7eb7;
-    color: white;
-    /*cursor: pointer; Se cambia el cursor de flecha por uno de manito */
-    Border: 0.1em;
-    padding: 5px 10px;
-    border-radius: 4px; /*Redondea los bordes de este boton */
-    font-weight: bolder; /*Negrita */
     box-shadow: 0.1em 0.1em 0.05em rgb(13, 72, 109); /*Inserta una sombra: https://developer.mozilla.org/en-US/docs/Web/CSS/box-shadow */
 }
 
 /*MODIFICADORES DE CLASE */
 .secondaryButton:hover { /*Los elementos con esta clase cambian cuando el cursor les pasa por encima  */
-    cursor: pointer; /*El cursor se vuelve manito al pasar sobre el elemento */
     box-shadow: 0.3em 0.3em 0.1em rgb(13, 72, 109); /*La sombra crece un poco*/
-    transform: scale(1.1); /*El tamaño crece al 110%*/
-
 }
