Se genera un estilo de cards con hover para resaltar para la info de perros

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,11 +2,14 @@ ul {
     list-style: none; /*Se suprimen estilos de lista de los ul; viñetas (bullets) desaparecen */
 }
 
+header {
+    width: 100%;
+}
 .navbar { /*Podria tambien haberse hecho usando un grid con una fila y 5 columnas */ /*Podria tambien haberse hecho usando un grid con una fila y 5 columnas */
     display: flex;
     justify-content: space-between;
-    padding: 20px;
-    margin: 0px;
+    padding: 2%;
+    margin: 0;
     background-color: #d7eaf6;
     border-bottom: 0.1em solid rgb(154, 196, 250);
     box-shadow: 0.2em 0 0.1em rgb(154, 196, 250);
@@ -95,16 +98,33 @@ siendo esto una buena practica que nos permite actualizar el codigo de forma sen
     flex-direction: column;
     align-items: center;
     margin: 0.5vw;
+    border: 0.1em solid #1bb76e;
+    box-shadow: 0.1em 0.2em 0.1em #1bb76e;
+    border-radius: 5%;
 }
 
-/* .imgContainer > img {
+.imgContainer:hover {
+    cursor: pointer;
+    transform: scale(1.1);
+    /*border:0.1em solid #1bb76e;*/
+    border-radius: 0%;
+}
+
+.imgContainer > img {
     /* height: 10em;
     object-fit:cover;
-    width: 100%; /*La imagen debe ajustarse al 100% del tamaño del padre
-} */
+    width: 100%; /*La imagen debe ajustarse al 100% del tamaño del padre */
+    border-radius: 2em;
+    margin-bottom: 0.2em;
+}
 
 .imgContainer > label {
     text-align: center;
+    background-color: #023f23;
+    color: white;
+    font-weight: bold;
+    font-size: large;
+    width: 100%;
 }
 
 .breedCardContainer {
